--- a/web/css/component/login.css
+++ b/web/css/component/login.css
@@ -3,7 +3,7 @@
   position: absolute;
   z-index: 1000;
   right: -70px;
-  top: 50px;
+  top: 100px;
   background: url(../img/home/loginBg.png) no-repeat center bottom;
   padding: 0 70px 5px; }
 
@@ -119,8 +119,8 @@
     color: #fff;
     font-size: 20px;
     font-family: "微软雅黑";
-    background: #1566d6;
-    border: 1px solid #1566d6;
+    background: #FF652B;
+    border: 1px solid #FF652B;
     border-radius: 5px;
     text-align: center;
     display: block;
@@ -137,7 +137,7 @@
   .login p {
     line-height: 55px; }
     .login p a {
-      color: #1566d6; }
+      color: #FF652B; }
       .login p a.spec {
         color: #757982; }
   .login .login-btn-others {
