--- a/web/css/index.css
+++ b/web/css/index.css
@@ -37,8 +37,8 @@ body {
 .main-con-right {
   width: 23%; }
   .main-con-right h2 {
-    padding: 0 15px;
-    line-height: 35px;
+    padding: 13px 15px 0;
+    line-height: 50px;
     color: #000;
     font-size: 14px;
     font-weight: bold;
@@ -286,7 +286,7 @@ body {
   position: absolute;
   z-index: 1000;
   right: -70px;
-  top: 50px;
+  top: 100px;
   background: url(../img/home/loginBg.png) no-repeat center bottom;
   padding: 0 70px 5px; }
 
@@ -402,8 +402,8 @@ body {
     color: #fff;
     font-size: 20px;
     font-family: "微软雅黑";
-    background: #1566d6;
-    border: 1px solid #1566d6;
+    background: #FF652B;
+    border: 1px solid #FF652B;
     border-radius: 5px;
     text-align: center;
     display: block;
@@ -420,7 +420,7 @@ body {
   .login p {
     line-height: 55px; }
     .login p a {
-      color: #1566d6; }
+      color: #FF652B; }
       .login p a.spec {
         color: #757982; }
   .login .login-btn-others {
@@ -474,63 +474,90 @@ body {
     margin-top: 80px; }
 
 .main-ad {
-  height: 549px;
-  background: url(../img/home/adBgx.gif) repeat-x;
-  overflow: hidden; }
+  height: 673px;
+  overflow: hidden;
+  background: #43AEDB;
+  background: -moz-linear-gradient(left, #40A6D1, #46B6E5);
+  background: -webkit-gradient(linear, left, right, color-stop(#40A6D1), color-stop(#46B6E5));
+  background: -webkit-linear-gradient(left, #40A6D1, #46B6E5);
+  background: -o-linear-gradient(left, #40A6D1, #46B6E5);
+  background: -ms-linear-gradient(left, #40A6D1, #46B6E5);
+  background: linear-gradient(to right, #40A6D1, #46B6E5);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#40A6D1', endColorstr='#46B6E5',GradientType=0 ); }
+
+.coinBg {
+  width: 1492px;
+  height: 673px;
+  margin: 0 auto;
+  background: url(../img/home/coinBg.png) no-repeat; }
+
+.coinBack {
+  width: 100%;
+  height: 100%;
+  background: url(../img/home/coinBack.png) no-repeat -89px 40px; }
 
 .main-ad-con {
   width: 1000px;
-  height: 549px;
+  height: 100%;
   position: relative;
   z-index: 1; }
 
-.introBg {
-  background: url(../img/home/adBg.png) no-repeat;
-  height: 575px;
-  width: 807px;
-  position: absolute;
-  left: -80px;
-  top: -26px;
-  z-index: 2; }
-
 .main-ad-con-text {
   color: #fff;
-  padding-top: 115px;
-  padding-left: 70px;
+  padding-top: 145px;
+  padding-left: 20px;
   position: absolute;
   z-index: 3; }
-  .main-ad-con-text p {
-    margin-top: 20px;
-    line-height: 32px;
-    font-size: 24px; }
-    .main-ad-con-text p img {
+  .main-ad-con-text .digits {
+    margin-top: 28px; }
+    .main-ad-con-text .digits img {
       vertical-align: middle; }
-    .main-ad-con-text p span {
-      margin-left: 1px;
+    .main-ad-con-text .digits span {
+      margin-left: 4px;
       width: 24px;
       height: 32px;
       line-height: 30px;
       text-align: center;
-      color: #eb7020;
-      font-size: 20px;
-      font-weight: bold;
       overflow: hidden;
-      background: url(../img/home/numBg.png) no-repeat;
       display: inline-block;
       *display: inline;
       *zoom: 1;
-      vertical-align: middle; }
-    .main-ad-con-text p b {
+      vertical-align: middle;
+      background-color: rgba(0, 0, 0, 0.41);
+      border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      -ms-border-radius: 5px;
+      -o-border-radius: 5px;
+      -webkit-box-shadow: 0 1px 2px #4489A6;
+      -moz-box-shadow: 0 1px 2px #4489A6;
+      box-shadow: 0 1px 2px #4489A6; }
+    .main-ad-con-text .digits b {
       width: 24px;
       height: 300px;
       background: url(../img/home/num.png) no-repeat center;
       display: block; }
+  .main-ad-con-text .moreText {
+    margin-top: 67px; }
+    .main-ad-con-text .moreText p {
+      color: #fff;
+      line-height: 36px;
+      font-size: 16px;
+      text-shadow: 0 1px 2px #3A99BF; }
+      .main-ad-con-text .moreText p em {
+        width: 12px;
+        height: 12px;
+        background: url(../img/home/indexMess.png) no-repeat 0 0;
+        display: inline-block;
+        margin-right: 7px; }
+      .main-ad-con-text .moreText p .corYellow {
+        color: #ffe524; }
   .main-ad-con-text .more-btn {
-    margin-top: 75px; }
+    margin-top: 45px; }
     .main-ad-con-text .more-btn a {
       width: 140px;
-      height: 53px;
-      line-height: 53px;
+      height: 50px;
+      line-height: 50px;
       text-align: center;
       color: #fff;
       font-size: 16px;
@@ -540,13 +567,21 @@ body {
       *display: inline;
       *zoom: 1; }
 
+.arrowScroll {
+  width: 65px;
+  height: 30px;
+  background: url(../img/home/indexMess.png) no-repeat -6px -45px;
+  position: absolute;
+  bottom: -1px;
+  left: 470px; }
+
 .main-con h2 {
   margin-bottom: 45px; }
 
 .main-con-process {
   padding: 50px 0;
   height: 461px;
-  background: url(../img/home/adProcess.png) no-repeat center #fffaa9;
+  background: url(../img/home/adProcess.png) no-repeat center #EFEFEF;
   overflow: hidden;
   position: relative; }
   .main-con-process .sLog {
