--- a/web/sass/index.scss
+++ b/web/sass/index.scss
@@ -20,51 +20,57 @@ $main-ad-color: #eb7020;
 	}
 }
 .main-ad{
-	height: 549px;
-	background: url(../img/home/adBgx.gif) repeat-x;
+	height: 673px;
 	overflow: hidden;
+	background: #43AEDB;
+    background: -moz-linear-gradient(left, #40A6D1, #46B6E5);
+    background: -webkit-gradient(linear, left, right, color-stop(#40A6D1), color-stop(#46B6E5));
+    background: -webkit-linear-gradient(left, #40A6D1, #46B6E5);
+    background: -o-linear-gradient(left, #40A6D1, #46B6E5);
+    background: -ms-linear-gradient(left, #40A6D1, #46B6E5);
+    background: linear-gradient(to right, #40A6D1, #46B6E5);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#40A6D1', endColorstr='#46B6E5',GradientType=0 );
+}
+.coinBg{
+	width: 1492px;
+	height: 673px;
+	margin: 0 auto;
+	background: url(../img/home/coinBg.png) no-repeat;
+}
+.coinBack{
+	width: 100%;
+	height: 100%;
+	background: url(../img/home/coinBack.png) no-repeat -89px 40px;
 }
 .main-ad-con{
 	width: 1000px;
-	height: 549px;
+	height: 100%;
 	position: relative;
 	z-index: 1;
 }
-.introBg{
-	background: url(../img/home/adBg.png) no-repeat;
-    height: 575px;
-    width: 807px;
-    position: absolute;
-    left: -80px;
-    top: -26px;
-    z-index: 2;
-}
 .main-ad-con-text{
 	color: #fff;
-	padding-top: 115px;
-	padding-left: 70px;
+	padding-top: 145px;
+	padding-left: 20px;
 	position: absolute;
 	z-index: 3;
-	p{
-		margin-top: 20px;
-		line-height: 32px;
-		font-size: 24px;
+	.digits{
+		margin-top: 28px;
 		img{
 			vertical-align: middle;
 		}
 		span{
-			margin-left: 1px;
+			margin-left: 4px;
 			width: 24px;
 			height: 32px;
 			line-height: 30px;
 			text-align: center;
-			color: $main-ad-color;
-			font-size: 20px;
-			font-weight: bold;
 			overflow: hidden;
-			background: url(../img/home/numBg.png) no-repeat;
 			@include dib();
 			vertical-align: middle;
+			background-color: rgba(0,0,0,0.41);
+			@include border-radius(5px);
+			@include box-shadow(0 1px 2px #4489A6);
 		}
 		b{
 			width: 24px;
@@ -73,12 +79,31 @@ $main-ad-color: #eb7020;
 			display: block;
 		}
 	}
+	.moreText{
+		margin-top: 67px;
+		p{	
+			color: #fff;
+			line-height: 36px;
+			font-size: 16px;
+			text-shadow:0 1px 2px #3A99BF;
+			em{
+				width: 12px;
+				height: 12px;
+				background: url(../img/home/indexMess.png) no-repeat 0 0;
+			    display: inline-block;
+			    margin-right: 7px;
+			}
+			.corYellow{
+				color: #ffe524; 
+			}
+		}
+	}
 	.more-btn{
-		margin-top: 75px;
+		margin-top: 45px;
 		a{
 			width: 140px;
-			height: 53px;
-			line-height: 53px;
+			height: 50px;
+			line-height: 50px;
 			text-align: center;
 			color: #fff;
 			font-size: 16px;
@@ -88,6 +113,14 @@ $main-ad-color: #eb7020;
 		}
 	}
 }
+.arrowScroll{
+	width: 65px;
+	height: 30px;
+	background: url(../img/home/indexMess.png) no-repeat -6px -45px;
+	position: absolute;
+    bottom: -1px;
+    left: 470px;
+}
 .main-con{
 	h2{
 		margin-bottom: 45px;
@@ -96,7 +129,7 @@ $main-ad-color: #eb7020;
 .main-con-process{
 	padding: 50px 0;
 	height: 461px;
-	background: url(../img/home/adProcess.png) no-repeat center #fffaa9;
+	background: url(../img/home/adProcess.png) no-repeat center #EFEFEF;
 	overflow: hidden;
 	position: relative;
 	.sLog{
