--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -174,7 +174,7 @@ body {
   right: 0;
   border: 1px solid #ebedf2;
   background: #fff;
-  width: 186px;
+  width: 194px;
   display: none; }
   .header-top-con .personal li {
     float: none;
@@ -190,7 +190,7 @@ body {
     .header-top-con .personal li:hover {
       background: #fafafa; }
 .header-top-con .personal-con {
-  padding: 15px 20px; }
+  padding: 15px; }
   .header-top-con .personal-con span {
     padding: 0;
     display: inline-block;
