--- a/web/sass/layout/header.scss
+++ b/web/sass/layout/header.scss
@@ -118,7 +118,7 @@ $top-bg-color: #36363c;
 		right: 0;
 		border: $block-border;
 		background: $block-bg-color;
-		width: 186px;
+		width: 194px;
 		display: none;
 		li{
 			float: none;
@@ -137,7 +137,7 @@ $top-bg-color: #36363c;
 		
 	}
 	.personal-con{
-		padding: 15px 20px;
+		padding: 15px;
 		span{
 			padding: 0;
 			@include dib();
