--- a/src/Wenwen/FrontendBundle/Resources/views/Home/home.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/home.html.twig
@@ -24,63 +24,39 @@
 			<h1><em></em>问卷列表<a class="more" href="{{ path('_survey_index') }}">更多>></a></h1>
 			{{ render(controller('WenwenFrontendBundle:Survey:top' ) ) }}
 			<ul id="surveyList">
-				{# SSI permission #}
-        {%  if (ssi_respondent is null or ssi_respondent.needPrescreening) %}
-				<!-- <li class="ssiPermission">
-				    <div class="survey-item">
-				        <div class="title">ssi同意问卷</div>
-				        <ul class="con clearfix">
-				            <li class="first">
-				                <span>问卷编号</span>
-				                <p>--</p>
-				            </li>
-				            <li>
-				                <span>问卷类型</span>
-				                <p title="商业问卷">商业问卷</p>
-				            </li>
-				            <li>
-				                <span>回答期限</span>
-				                <p>--</p>
-				            </li>
-				            <li class="last">
-				                <span>积分数</span>
-				                <p><strong>1</strong></p>
-				            </li>
-				        </ul>
-				    </div>
-				    <div class="survey-btn">
-				        <a href="javascript: void(0)" target="_brank" onClick="pop_survey_window(this);return false;" >可回答</a>
-				    </div>
-				</li> -->
-				{# SSI survey #}
-        {% elseif ssi_respondent.isActive and ssi_surveys %}
-				    <li class="ssiSurvey" style="display: block;">
-				        <div class="survey-item">
-				            <div class="title">ssi</div>
-				            <ul class="con clearfix">
-				                <li class="first">
-				                    <span>问卷编号</span>
-                            <p>s{{ ssi_surveys[0].ssiProjectId }} {{ssi_project_config.title }}</p>
-				                </li>
-				                <li>
-				                    <span>问卷类型</span>
-                            <p title="商业问卷">商业问卷</p>
-				                </li>
-				                <li>
-				                    <span>回答期限</span>
-				                    <p>---</p>
-				                </li>
-				                <li class="last">
-				                    <span>积分数</span>
-                            <p><strong>{{ ssi_project_config.point }}</strong></p>
-				                </li>
-				            </ul>
-				        </div>
-				        <div class="survey-btn">
-				            <a href="{{ path('_ssi_project_survey_cover', {'survey_id': ssi_surveys[0].ssiProjectId}) }}" >可回答</a>
-				        </div>
-				    </li>
-        {% endif %}
+			{% set has_tip_displayed = 0 %}
+    		{%  if (ssi_respondent is null or ssi_respondent.needPrescreening) %}
+    		{# SSI permission #}
+				{{ include( 'WenwenFrontendBundle:Survey:_surveyRow.html.twig',
+                    {
+                        'type_class': 'trade',
+                        'type_desc': '高积分问卷，基于您回答的属性问卷发送给您。有名额和日期限制，请尽快回答',
+                        'type_label': '商业问卷',
+                        'end_date': '--',
+                        'num': '--',
+                        'title': '申请参与SSI海外市场调查项目',
+                        'answered': false,
+                        'url': path('_ssi_partner_permission'),
+                        'point':1,
+                        'answer_status_label': '投票',
+                        'tip': has_tip_displayed ? null : '赶快加入SSI海外项目，可获更多高分问卷！'
+                    } ) }}
+                {% set has_tip_displayed = 1 %}
+    		{% elseif ssi_respondent.isActive and ssi_surveys %}
+    		{# SSI survey #}
+			    {{ include( 'WenwenFrontendBundle:Survey:_surveyRow.html.twig',
+                  {
+                        'type_class': 'trade',
+                        'type_desc': '高积分问卷，基于您回答的属性问卷发送给您。有名额和日期限制，请尽快回答',
+                        'type_label': '商业问卷',
+                        'end_date': '--',
+                        'num': 's' + ssi_surveys[0].ssiProjectId,
+                        'title': ssi_project_config.title,
+                        'answered': false,
+                        'url': path('_ssi_project_survey_cover', {'survey_id': ssi_surveys[0].ssiProjectId}),
+                        'point': ssi_project_config.point,
+                  } ) }}
+    		{% endif %}
 			</ul>
 		</div>
 		{# 这里的快速问答显示目前91问问快速问答页面的那5条 #}
