--- a/src/Wenwen/FrontendBundle/Resources/views/Components/_headerNav.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Components/_headerNav.html.twig
@@ -23,7 +23,7 @@
         {% if app.session.has('uid') %}
         {% else %}
         <div class="login-btn right">
-            <a href="{{ path('_user_reg') }}" title="注册">注册</a>
+            <a href="{{ path('_user_reg') }}" title="注册" class="sign">注册</a>
             {% if app.request.attributes.get('_route') == '_user_login' %}
             <a href="javascript: void(0)" title="登录">登录</a>
             {% else %}
