--- a/web/css/advertisement.css
+++ b/web/css/advertisement.css
@@ -268,18 +268,14 @@ body {
         color: #ff6700; }
   .header-nav .login-btn a {
     margin-left: 5px;
-    padding: 5px 10px;
-    color: #88878e;
-    border: 1px solid #dedfe3;
-    border-radius: 3px; }
+    padding: 0 10px;
+    color: #888; }
     .header-nav .login-btn a:hover {
-      color: #fff;
-      background: #ff6700;
-      border: 1px solid #ff6700;
-      transition: all 0.1s;
-      -moz-transition: all 0.1s;
-      -webkit-transition: all 0.1s;
-      -o-transition: all 0.1s; }
+      color: #ff652b; }
+  .header-nav .login-btn a.sign {
+    color: #ff652b;
+    border-left: 1px solid #d0d1d1;
+    padding-left: 40px; }
 
 .main-slider-wrapper {
   background: #e0ebff;
@@ -394,8 +390,8 @@ body {
       text-align: center;
       font-size: 14px;
       color: #fff;
-      background: #ff6700;
-      border: 1px solid #ff6700;
+      background: #ff652b;
+      border: 1px solid #ff652b;
       border-radius: 3px;
       cursor: pointer;
       transition: all 0.4s;
@@ -406,8 +402,8 @@ body {
       *display: inline;
       *zoom: 1; }
       .main-slider span a:hover {
-        background: #f25807;
-        border: 1px solid #f25807; }
+        background: #f05218;
+        border: 1px solid #f05218; }
     .main-slider span .relate {
       margin-top: 10px;
       height: 30px;
