--- a/web/css/shopDetail.css
+++ b/web/css/shopDetail.css
@@ -36,8 +36,8 @@ body {
 .main-con-right {
   width: 23%; }
   .main-con-right h2 {
-    padding: 0 15px;
-    line-height: 35px;
+    padding: 13px 15px 0;
+    line-height: 50px;
     color: #000;
     font-size: 14px;
     font-weight: bold;
@@ -268,18 +268,14 @@ body {
         color: #ff6700; }
   .header-nav .login-btn a {
     margin-left: 5px;
-    padding: 5px 10px;
-    color: #88878e;
-    border: 1px solid #dedfe3;
-    border-radius: 3px; }
+    padding: 0 10px;
+    color: #888; }
     .header-nav .login-btn a:hover {
-      color: #fff;
-      background: #ff6700;
-      border: 1px solid #ff6700;
-      transition: all 0.1s;
-      -moz-transition: all 0.1s;
-      -webkit-transition: all 0.1s;
-      -o-transition: all 0.1s; }
+      color: #ff652b; }
+  .header-nav .login-btn a.sign {
+    color: #ff652b;
+    border-left: 1px solid #d0d1d1;
+    padding-left: 40px; }
 
 .crumbs {
   margin: 10px 0 20px 11px; }
@@ -364,8 +360,8 @@ body {
     font-size: 14px;
     cursor: pointer;
     color: #fff;
-    background: #ff6700;
-    border: 1px solid #ff6700;
+    background: #ff652b;
+    border: 1px solid #ff652b;
     border-radius: 3px;
     cursor: pointer;
     transition: all 0.4s;
@@ -376,8 +372,8 @@ body {
     *display: inline;
     *zoom: 1; }
     .main-con-shop .btn a:hover {
-      background: #f25807;
-      border: 1px solid #f25807; }
+      background: #f05218;
+      border: 1px solid #f05218; }
 .main-con-shop h1 {
   font-size: 24px;
   line-height: 55px; }
