--- a/web/css/weiboQQ.css
+++ b/web/css/weiboQQ.css
@@ -127,8 +127,8 @@ body {
   height: 36px;
   line-height: 36px;
   color: #fff;
-  background: #ff6700;
-  border: 1px solid #ff6700;
+  background: #ff652b;
+  border: 1px solid #ff652b;
   border-radius: 3px;
   cursor: pointer;
   transition: all 0.4s;
@@ -140,8 +140,8 @@ body {
   *zoom: 1;
   vertical-align: middle; }
   .form .btn span:hover {
-    background: #f25807;
-    border: 1px solid #f25807; }
+    background: #f05218;
+    border: 1px solid #f05218; }
 
 #pwdStrength {
   padding: 0;
