ie8 hack and delete unneeded picture

--- a/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
@@ -109,7 +109,7 @@
 				</div>
 				<div class="rTag">2050积分<br>起兑</div>
 			</li>
-			<li>
+			<li class="last">
 				<div class="rMes">
 					<span class="rPic3"></span>
 					<span class="rTit">上网流量包</span>
