--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -182,6 +182,7 @@ body {
     line-height: 35px;
     padding: 0 20px; }
     .header-top-con .personal li a {
+      width: 100%;
       border-right: none;
       color: #4d4d4d;
       display: inline-block;
