--- a/web/sass/layout/header.scss
+++ b/web/sass/layout/header.scss
@@ -126,6 +126,7 @@ $top-bg-color: #36363c;
 			line-height: 35px;
 			padding: 0 20px;
 			a{
+				width: 100%;
 				border-right: none;
 				color: #4d4d4d;
 				@include dib();
