--- a/src/Wenwen/FrontendBundle/Resources/views/User/resetPwd.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/resetPwd.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block header %}
-{% include 'WenwenFrontendBundle:Components:_headerSimple.html.twig' %}
+{{ include( 'WenwenFrontendBundle:Components:_headerSimple.html.twig', {'theme': '重置密码'} ) }}
 {% endblock %}
 
 {% block body %}
