--- a/web/sass/home.scss
+++ b/web/sass/home.scss
@@ -118,12 +118,12 @@ $slider-height: 305px;
 	margin: 0 auto;
 	z-index: 10000;
 	.newguide1{
-		width: 881px;
-		height: 407px;
+		width: 455px;
+		height: 222px;
 		position: absolute;
 		background: url(../img/home/guide1.png) no-repeat 0 0;
-		left: 32px;
-	    top: 433px;
+		left: 292px;
+		top: 303px;
 	}
 	.newguide2{
 		width: 520px;
@@ -154,7 +154,7 @@ $slider-height: 305px;
 	}
 	.ngbtn1{
 		right: 69px;
-	    bottom: 71px;
+	    bottom: 11px;
 	}
 	.ngbtn2{
 		right: 69px;
@@ -171,8 +171,8 @@ $slider-height: 305px;
 	    cursor: pointer;
 	}
 	.ngclose1{
-		right: 0;
-	    bottom: 78px;
+		right: -7px;
+		bottom: 18px;
 	}
 	.ngclose2{
 		right: 0;
