--- a/web/sass/component/login.scss
+++ b/web/sass/component/login.scss
@@ -128,15 +128,15 @@
 		color: #fff;
 		font-size: 20px;
 		font-family: "微软雅黑";
-		background: #FF652B;
-		border: 1px solid #FF652B;
+		background: #e85015;
+		border: 1px solid #e85015;
 		border-radius: 5px;
 		text-align: center;
 		display: block;
 		cursor: pointer;
 		&:hover{
-			background:#f05218;
-			border: 1px solid #f05218;
+			background:#d34216;
+			border: 1px solid #d34216;
 		}
 		@include transition(all, 0.4s);
 		a{
