--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/index.html.twig
@@ -15,7 +15,7 @@
 	<div class="main-con-advertisement">
 		{% include 'WenwenFrontendBundle:Advertisement:_hallNavs.html.twig' %} 
 		<div class="tabCon offerWow">
-			<iframe src='http://www.offer-wow.com/affiliate/wall/open.do?websiteid=1162&styleIndex=1&memberid=1132938' style='width:720px;height:560px;' scrolling='no' frameborder='no' border='0' allowTransparency='true'></iframe>
+			<!-- <iframe src='http://www.offer-wow.com/affiliate/wall/open.do?websiteid=1162&styleIndex=1&memberid=1132938' style='width:720px;height:560px;' scrolling='no' frameborder='no' border='0' allowTransparency='true'></iframe>
 			<div class="taskFlow">
 				<h4>轻松3步，领取奖励</h4>
 				<div class="conWrapper">
@@ -41,6 +41,9 @@
 						</div>
 					</div>
 				</div>
+			</div> -->
+			<div class="maintenance">
+				<div class="con">系统正在维护中，非常抱歉给您带来了不便。</div>
 			</div>
 		</div>
 	</div>
