--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/offer99.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/offer99.html.twig
@@ -15,7 +15,10 @@
 	<div class="main-con-advertisement">
 		{% include 'WenwenFrontendBundle:Advertisement:_hallNavs.html.twig' %} 
 		<div class="tabCon offer99">
-			<iframe src='http://app.offer99.com/index.php?pid=f4b42b65ce528bb151ea6e2eb5a01692&userid=1132938' style='width:1000px;height:1140px;' scrolling='auto' frameborder='no' border='0' allowTransparency='true'></iframe>
+			<!-- <iframe src='http://app.offer99.com/index.php?pid=f4b42b65ce528bb151ea6e2eb5a01692&userid=1132938' style='width:1000px;height:1140px;' scrolling='auto' frameborder='no' border='0' allowTransparency='true'></iframe> -->
+			<div class="maintenance">
+				<div class="con">系统正在维护中，非常抱歉给您带来了不便。</div>
+			</div>
 		</div>
 	</div>
 </div>
