--- a/web/sass/advertisement.scss
+++ b/web/sass/advertisement.scss
@@ -227,6 +227,16 @@
 		&.offerWow{
 			padding: 20px 25px;
 		}
+		.maintenance{
+			width: 100%;
+			text-align: center;
+			height: 260px;
+			padding-top: 200px;
+			background: url(../img/questionnaire/normalface.png) no-repeat 180px 150px;
+			.con{
+				font-size: 16px;
+			}
+		}
 	}
 	.taskFlow{
 		position: absolute;
