--- a/web/css/account.css
+++ b/web/css/account.css
@@ -459,6 +459,16 @@ h1 {
 .main-personal-account {
   padding: 20px 45px 50px;
   color: #666; }
+  .main-personal-account .successMess {
+    width: 150px;
+    margin: 0 auto;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    border: 2px solid #ade378;
+    background: #f7f7f7;
+    border-radius: 5px;
+    display: none; }
   .main-personal-account li {
     padding: 15px 0;
     line-height: 45px;
@@ -532,7 +542,9 @@ h1 {
         text-align: right;
         font-size: 12px;
         font-weight: normal;
-        color: #666; }
+        color: #666;
+        height: 32px;
+        line-height: 32px; }
     .main-personal-account .con p {
       line-height: 24px; }
     .main-personal-account .con em {
@@ -568,32 +580,13 @@ h1 {
           .main-personal-account .con .btn span.backStep:hover {
             background: #a7a7a7;
             border: 1px solid #a7a7a7; }
-    .main-personal-account .con.bding ul {
-      margin-top: 20px;
-      padding: 0;
-      border-top: 1px solid #f6f6f6; }
-    .main-personal-account .con.bding span {
-      margin-left: 40px;
-      width: 110px;
-      vertical-align: middle; }
-    .main-personal-account .con.bding strong {
-      margin-left: 20px;
-      line-height: 45px;
-      display: inline-block;
-      *display: inline;
-      *zoom: 1;
-      vertical-align: middle; }
-    .main-personal-account .con.subscribe label {
-      margin-right: 10px; }
-    .main-personal-account .con.subscribe p {
-      padding-left: 100px; }
-    .main-personal-account .con.subscribe .btn {
-      padding: 10px 0 0 100px; }
     .main-personal-account .con.withdraw span {
       display: inline-block;
       *display: inline;
       *zoom: 1;
-      vertical-align: middle; }
+      vertical-align: middle;
+      margin-left: 0;
+      padding-left: 0; }
     .main-personal-account .con.withdraw ul.tips {
       margin-top: 10px; }
     .main-personal-account .con.withdraw ul.reason {
@@ -601,12 +594,14 @@ h1 {
       border: 1px solid #f6f6f6; }
       .main-personal-account .con.withdraw ul.reason #email {
         padding-left: 5px; }
+    .main-personal-account .con.withdraw ul.reason-options li {
+      margin-top: 0; }
     .main-personal-account .con.withdraw ul.reason-options span {
       width: 210px; }
     .main-personal-account .con.withdraw ul label {
       width: 110px; }
     .main-personal-account .con.withdraw li {
-      margin-top: 0;
+      margin-top: 5px;
       line-height: 24px; }
     .main-personal-account .con.withdraw .btn {
       padding: 10px 0 0 0; }
