add js validate

--- a/src/Wenwen/FrontendBundle/Resources/views/Profile/account.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Profile/account.html.twig
@@ -33,8 +33,8 @@
                                 <span id="curPwd_error"></span>
                             </li>
                             <li>
-                                <label for="newPwd">新密码：</label>
-                                <input type="password" id="newPwd">
+                                <label for="pwd">新密码：</label>
+                                <input type="password" id="pwd">
                                 <span class="hide" id="pwdStrength"><em class="fl">安全程度：</em><b class="c1">弱</b><b>中</b><b>强</b></span>
                                 <span id="newPwd_succeed" class="succeed"></span>
                                 <span id="newPwd_error"></span>
@@ -47,7 +47,7 @@
                             </li>
                         </ul>
                         <div class="backError"></div>
-                        <div class="btn"><span id="pwd_save">保存</span></div>
+                        <div class="btn"><span id="pwd_save" tabindex="0">保存</span></div>
                         </form>
                     </div>
                 </li>
@@ -69,8 +69,8 @@
                             <p>请确认您要注销会员。请在完成简单的问卷调查后，点击 《注销》 完成会员的注销手续。</p>
                             <div>用户注销以及问卷调查</div>
                             <ul class="reason">
-                                <li><label for="emailWithdraw">请输入您的账号：</label><input id="emailWithdraw" type="text" name="emailWithdraw"></li>
-                                <li><label for="pwdWithdraw">请输入您的密码：</label><input id="pwdWithdraw" type="password" name="pwdWithdraw"></li>
+                                <li><label for="withdrawEmail">请输入您的账号：</label><input id="withdrawEmail" type="text" name="withdrawEmail"><span id="withdrawEmail_succeed"></span><span id="withdrawEmail_error"></span></li>
+                                <li><label for="withdrawPwd">请输入您的密码：</label><input id="withdrawPwd" type="password" name="withdrawPwd"><span id="withdrawPwd_succeed"></span><span id="withdrawPwd_error"></span></li>
                                 <li><label for="reasons">注销用户的理由：</label><span id="reasons"><ul class="reason-options">
                                     <li><span><input type="checkbox" name="reason[]" value="问卷调查活动的数量太少了">问卷调查活动的数量太少了</span><span><input type="checkbox" name="reason[]" value="每个问卷的奖励太少了">每个问卷的奖励太少了</span></li>
                                     <li><span><input type="checkbox" name="reason[]" value="问卷所要的时间太长了">问卷所要的时间太长了</span><span><input type="checkbox" name="reason[]" value="相对于问题来说，积分报酬太少了">相对于问题来说，积分报酬太少了</span></li>
@@ -79,7 +79,7 @@
                                 </ul></span></li>
                             </ul>
                             <div class="backError"></div>
-                            <div class="btn"><span class="backStep">上一步</span><span id="withdraw_save">注销用户</span></div>
+                            <div class="btn"><span class="backStep" tabindex="0">上一步</span><span id="withdraw_save" tabindex="0">注销用户</span></div>
                         </div>
                     </div>
                 </li>
