modify pic and css on homepage and about page

--- a/src/Wenwen/FrontendBundle/Resources/views/About/company.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/About/company.html.twig
@@ -28,17 +28,19 @@
 					员工人数：60人（截至2015年11月底） <br/>
 					营业额：4亿日元（截至2015年11月底）</p>
 					<h3>发展历史</h3>
-					<p class="lh30">2015年9月更名为dataSpring, Inc. (日本) <br/>
-						2011年1月发布日本消费者数据统计系统 LifeStyle Index Japan <br/>
-						2010年10月韩国面板规模超过100,000,在美国加州洛杉矶成立办事处 <br/>
-						2010年9月在菲律宾首都马尼拉成立7×24小时运营中心,发布中国消费者数据统计系统 LifeStyle Index China <br/>
-						2010年3月在韩国建立第二个海外面板(panelnow.co.kr),成立RPK株式会社(Research Panel Korea Inc.) <br/>
-						2010年2月中国面板规模超过100,000 并正式发布<br/>
-						2009年11月在中国成立第一个海外面板(91wenwen.net) <br/>
-						2009年10月VOYAGE GROUP的全资子公司亚洲调查面板株式会社(RPA)成立 <br/>
-						2006年5月日本调查面板(RPJ)同Cross Marketing公司达成资金层面的合作 <br/>
-						2005年11月日本调查面板(RPJ)成立 <br/>
-						2005年10月VOYAGE GROUP集团开始涉足调查面板供应业务</p>
+					<div class="history">
+						<p class="hst1">更名为dataSpring, Inc. (日本)</p>
+						<p class="hst2">发布日本消费者数据统计系统 LifeStyle Index Japan</p>
+						<p class="hst3">韩国面板规模超过100,000,在美国加州洛杉矶成立办事处</p>
+						<p class="hst4">在菲律宾首都马尼拉成立7×24小时运营中心,发布中国消费者数据统计系统 LifeStyle Index China</p>
+						<p class="hst5">在韩国建立第二个海外面板(panelnow.co.kr),成立RPK株式会社(Research Panel Korea Inc.) </p>
+						<p class="hst6">中国面板规模超过100,000 并正式发布</p>
+						<p class="hst7">在中国成立第一个海外面板(91wenwen.net) </p>
+						<p class="hst8">VOYAGE GROUP的全资子公司亚洲调查面板株式会社(RPA)成立 </p>
+						<p class="hst9">日本调查面板(RPJ)同Cross Marketing公司达成资金层面的合作</p>
+						<p class="hst10">日本调查面板(RPJ)成立 </p>
+						<p class="hst11">VOYAGE GROUP集团开始涉足调查面板供应业务</p>
+					</div>
 			</li>
 		</ul>
 	</div>
