--- a/web/sass/index.scss
+++ b/web/sass/index.scss
@@ -22,14 +22,7 @@ $main-ad-color: #eb7020;
 .main-ad{
 	height: 673px;
 	overflow: hidden;
-	background: #43AEDB;
-    background: -moz-linear-gradient(left, #40A6D1, #46B6E5);
-    background: -webkit-gradient(linear, left, right, color-stop(#40A6D1), color-stop(#46B6E5));
-    background: -webkit-linear-gradient(left, #40A6D1, #46B6E5);
-    background: -o-linear-gradient(left, #40A6D1, #46B6E5);
-    background: -ms-linear-gradient(left, #40A6D1, #46B6E5);
-    background: linear-gradient(to right, #40A6D1, #46B6E5);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#40A6D1', endColorstr='#46B6E5',GradientType=0 );
+	background: #1bb5e6; 
 }
 .coinBg{
 	height: 673px;
