--- a/web/css/about.css
+++ b/web/css/about.css
@@ -354,6 +354,53 @@ p {
   padding: 0 15px; }
 .main-about-con .aboutR .rpaIntro .lh30 {
   line-height: 30px; }
+.main-about-con .aboutR .rpaIntro .history {
+  width: 100%;
+  height: 1106px;
+  position: relative;
+  background: url(../img/about/history.png) no-repeat 39px 18px;
+  display: inline-block;
+  *display: inline;
+  *zoom: 1; }
+  .main-about-con .aboutR .rpaIntro .history p {
+    width: 150px;
+    position: absolute;
+    text-align: left;
+    line-height: 22px;
+    font-size: 13px; }
+  .main-about-con .aboutR .rpaIntro .history .hst1 {
+    left: 79px;
+    top: 61px; }
+  .main-about-con .aboutR .rpaIntro .history .hst2 {
+    right: 40px;
+    top: 137px; }
+  .main-about-con .aboutR .rpaIntro .history .hst3 {
+    left: 79px;
+    top: 230px; }
+  .main-about-con .aboutR .rpaIntro .history .hst4 {
+    right: 40px;
+    top: 315px; }
+  .main-about-con .aboutR .rpaIntro .history .hst5 {
+    left: 79px;
+    top: 401px; }
+  .main-about-con .aboutR .rpaIntro .history .hst6 {
+    right: 40px;
+    top: 488px; }
+  .main-about-con .aboutR .rpaIntro .history .hst7 {
+    left: 79px;
+    bottom: 424px; }
+  .main-about-con .aboutR .rpaIntro .history .hst8 {
+    right: 40px;
+    bottom: 322px; }
+  .main-about-con .aboutR .rpaIntro .history .hst9 {
+    left: 79px;
+    bottom: 232px; }
+  .main-about-con .aboutR .rpaIntro .history .hst10 {
+    right: 40px;
+    bottom: 162px; }
+  .main-about-con .aboutR .rpaIntro .history .hst11 {
+    left: 79px;
+    bottom: 63px; }
 .main-about-con .aboutR .wwIntro p {
   margin: 16px 0;
   line-height: 23px; }
