--- a/web/sass/about.scss
+++ b/web/sass/about.scss
@@ -23,6 +23,64 @@
 			.lh30{
 				line-height: 30px;
 			}
+			.history{
+				width: 100%;
+				height: 1106px;
+				position: relative; 
+				background: url(../img/about/history.png) no-repeat 39px 18px;
+				@include dib();
+				p{
+					width: 150px;
+					position: absolute;
+					text-align: left;
+					line-height: 22px;
+					font-size: 13px;
+				}
+				.hst1{
+					left: 79px;
+					top: 61px;
+				}
+				.hst2{
+					right: 40px;
+					top: 137px;
+				}
+				.hst3{
+					left: 79px;
+					top: 230px;
+				}
+				.hst4{
+					right: 40px;
+					top: 315px;
+				}
+				.hst5{
+					left: 79px;
+					top: 401px;
+				}
+				.hst6{
+					right: 40px;
+					top: 488px;
+				}
+				.hst7{
+					left: 79px;
+					bottom: 424px;
+				}
+				.hst8{
+					right: 40px;
+					bottom: 322px; 
+				}
+				.hst9{
+					left: 79px;
+					bottom: 232px;
+				}
+				.hst10{
+					right: 40px;
+					bottom: 162px;
+				}
+				.hst11{
+					left: 79px;
+					bottom: 63px;
+				}
+			}
 		}
 		.wwIntro{
 			p{
