fix css and text

--- a/src/Wenwen/FrontendBundle/Resources/views/Profile/account.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Profile/account.html.twig
@@ -66,8 +66,7 @@
                             <div class="btn"><span id="withdraw_continue">继续注销</span></div>
                         </div>
                         <div class="step2 hide form">
-                            <p>请确认您要注销会员。请在完成简单的问卷调查后，点击 《注销》 完成会员的注销手续。</p>
-                            <div>用户注销以及问卷调查</div>
+                            <p>请您完成以下简单的问卷调查后，点击注销按钮完成会员注销手续。</p>
                             <ul class="reason">
                                 <li><label for="withdrawEmail">请输入您的账号：</label><input id="withdrawEmail" type="text" name="withdrawEmail"><span id="withdrawEmail_succeed"></span><span id="withdrawEmail_error"></span></li>
                                 <li><label for="withdrawPwd">请输入您的密码：</label><input id="withdrawPwd" type="password" name="withdrawPwd"><span id="withdrawPwd_succeed"></span><span id="withdrawPwd_error"></span></li>
