--- a/web/sass/account.scss
+++ b/web/sass/account.scss
@@ -152,10 +152,17 @@
 					margin-top: 10px;
 				}
 				&.reason{
+					margin-top: 10px;
 					padding: 10px 0;
 					border: $block-inner-border;
 					#email{
 						padding-left: 5px;
+					}
+					span{
+						padding-left: 5px;
+						&#reasons{
+							padding-left: 0px;
+						}
 					}
 				}
 				&.reason-options{
@@ -164,6 +171,7 @@
 					}
 					span{
 						width: 210px;
+						padding-left: 0px;
 					}
 				} 
 				label{
